// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return idcc for number 27 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "19",
      "_index": "cdtn_test-v1_documents",
      "_score": 6.779922,
      "_source": Object {
        "cdtnId": "ceb38cca3c",
        "effectif": 219,
        "id": "KALICONT000023973390",
        "num": 2701,
        "shortTitle": "Banque : personnel des banques de la Guyane",
        "slug": "2701-banque-personnel-des-banques-de-la-guyane",
        "title": "Banque : personnel des banques de la Guyane",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000023973390",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 6.779922,
  "total": Object {
    "relation": "eq",
    "value": 1,
  },
}
`;

exports[`return idcc results for boulangerie 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "18",
      "_index": "cdtn_test-v1_documents",
      "_score": 14.93559,
      "_source": Object {
        "cdtnId": "647c224c9b",
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "num": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Boulangerie-pâtisserie (entreprises artisanales)",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "17",
      "_index": "cdtn_test-v1_documents",
      "_score": 13.832229,
      "_source": Object {
        "cdtnId": "16752da066",
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "num": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Activités industrielles de boulangerie et pâtisserie",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 14.93559,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`return idcc results for pati 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "18",
      "_index": "cdtn_test-v1_documents",
      "_score": 14.719249,
      "_source": Object {
        "cdtnId": "647c224c9b",
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "num": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Boulangerie-pâtisserie (entreprises artisanales)",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "17",
      "_index": "cdtn_test-v1_documents",
      "_score": 13.615888,
      "_source": Object {
        "cdtnId": "16752da066",
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "num": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Activités industrielles de boulangerie et pâtisserie",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 14.719249,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`return idcc results in correct order for banque 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "20",
      "_index": "cdtn_test-v1_documents",
      "_score": 16.488403,
      "_source": Object {
        "cdtnId": "a25dfc974f",
        "effectif": 216431,
        "id": "KALICONT000005635780",
        "num": 2120,
        "shortTitle": "Banque",
        "slug": "2120-banque",
        "title": "Banque",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635780",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "19",
      "_index": "cdtn_test-v1_documents",
      "_score": 9.732853,
      "_source": Object {
        "cdtnId": "ceb38cca3c",
        "effectif": 219,
        "id": "KALICONT000023973390",
        "num": 2701,
        "shortTitle": "Banque : personnel des banques de la Guyane",
        "slug": "2701-banque-personnel-des-banques-de-la-guyane",
        "title": "Banque : personnel des banques de la Guyane",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000023973390",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 16.488403,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;
